--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-*.pyc
-.idea/
+# Created by .ignore support plugin (hsz.mobi)
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+saved_models/
